fixed precision and set strict location for /fastcgi

--- a/lab1/deploy/nginx/config.conf
+++ b/lab1/deploy/nginx/config.conf
@@ -10,8 +10,8 @@ server {
                 try_files $uri $uri/ =404;
 		}
         
-        # Forward requests to /api/* to the Java FastCGI app
-        location /fastcgi {
+        # Forward requests to /fastcgi to the Java FastCGI app
+        location = /fastcgi {
             include fastcgi_params;
             fastcgi_pass fastcgi_app:9000;
         }
