--- a/lab1/deploy/fastcgi/Dockerfile
+++ b/lab1/deploy/fastcgi/Dockerfile
@@ -1,12 +1,34 @@
-FROM maven:3-openjdk-17
+FROM openjdk:17-jdk
 
 WORKDIR /fastcgi-app
 
-COPY pom.xml .
-RUN mvn dependency:copy-dependencies
-
 COPY . .
+RUN javac -cp ".:src/:lib/*" -d classes src/Server.java
 
-RUN javac -cp .:fastcgi-lib.jar:target/dependency/* Server.java
+# =================COMPILE AS A JAR WITH EXTERNAL LIBS=================
+#RUN echo "Main-Class: Server" > MANIFEST.mf
+#RUN echo "Class-Path: lib/fastcgi-lib.jar lib/javax.json-1.1.4.jar" >> MANIFEST.mf
 
-CMD ["java", "-cp", ".:fastcgi-lib.jar:target/dependency/*", "-DFCGI_PORT=9000", "Server"]
+#RUN jar -cvfm Server.jar MANIFEST.mf -C classes/ . -C lib/ .
+#CMD ["java", "-DFCGI_PORT=9000", "-jar", "Server.jar"]
+
+
+# ================COMPILE AS A CLASS WITH EXTERNAL LIBS================
+#CMD ["java", "-cp", ".:src/:lib/*:classes/", "-DFCGI_PORT=9000", "Server"]
+
+
+# ==========COMPILE AS A SINGLE JAR INCLUDING DEPENDENCY LIBS==========
+RUN mkdir unpacked_libs && \
+    cd unpacked_libs && \
+    for jar in /fastcgi-app/lib/*.jar; do \
+        jar -xf "$jar"; \
+    done && \
+    cp -r . ../classes
+
+# Create the manifest file
+RUN echo "Main-Class: Server" > MANIFEST.mf
+
+# Package the JAR with unpacked libraries
+RUN jar -cvfm Server.jar MANIFEST.mf -C classes/ .
+
+CMD ["java", "-DFCGI_PORT=9000", "-jar", "Server.jar"]
