--- a/lab1/deploy/nginx/config.conf
+++ b/lab1/deploy/nginx/config.conf
@@ -7,12 +7,13 @@ server {
         index index.html;
         
         location / {
-                try_files $uri $uri/ =404;
+            add_header Content-Security-Policy "script-src 'none' 'unsafe-inline'";
+            try_files $uri $uri/ =404;
 		}
         
         # Forward requests to /fastcgi to the Java FastCGI app
         location = /fastcgi {
             include fastcgi_params;
-            fastcgi_pass fastcgi_app:9000;
+            fastcgi_pass fastcgi_app:9000;  
         }
     }
