--- a/lab2/deploy/src/main/webapp/WEB-INF/web.xml
+++ b/lab2/deploy/src/main/webapp/WEB-INF/web.xml
@@ -25,4 +25,13 @@
     <welcome-file-list>
         <welcome-file>ControllerServlet</welcome-file>
     </welcome-file-list>
+
+    <filter>
+        <filter-name>ForwardCheckFilter</filter-name>
+        <filter-class>com.itmo.lab.filters.ForwardCheckFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ForwardCheckFilter</filter-name>
+        <url-pattern>/AreaCheckServlet</url-pattern>
+    </filter-mapping>
 </web-app>
