additional tasks: moved to "under development" version of jakarta.platform; partial logging of jsp lifecycle steps

--- a/lab2/deploy/pom.xml
+++ b/lab2/deploy/pom.xml
@@ -11,15 +11,36 @@
     <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <dependencies>
+    <!-- <dependencies>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <!-- Add any other necessary dependencies -->
+        
+    </dependencies> -->
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>jakarta.platform</groupId>
+                <artifactId>jakarta.jakartaee-bom</artifactId>
+                <version>11.0.0-M4</version> <!-- using last 'under development' version of jakarta-platform -->
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>AreaChecker</finalName>
