migrated from wildfly to glassfish

--- a/lab2/deploy/Dockerfile
+++ b/lab2/deploy/Dockerfile
@@ -1,11 +1,8 @@
-# Use the official WildFly image
-FROM bitnami/wildfly:latest
+#FROM bitnami/wildfly:latest
+#COPY target/AreaChecker.war /opt/bitnami/wildfly/standalone/deployments/
+#CMD ["/opt/bitnami/wildfly/bin/standalone.sh", "-b", "0.0.0.0"]
 
-# Copy the WAR file into the WildFly deployments directory
-COPY target/AreaChecker.war /opt/bitnami/wildfly/standalone/deployments/
-
-# Modify standalone.xml to set welcome content or additional configurations
-#COPY standalone.xml /opt/bitnami/wildfly/standalone/configuration/
-
-# Set the default command to start WildFly in standalone mode
-CMD ["/opt/bitnami/wildfly/bin/standalone.sh", "-b", "0.0.0.0"]
+# Additional task: move to glassfish
+FROM omnifish/glassfish:latest
+COPY target/AreaChecker.war $PATH_GF_HOME/glassfish/domains/domain1/autodeploy/
+CMD ["asadmin", "start-domain", "-v"]
