--- a/lab4/docker-compose.yml
+++ b/lab4/docker-compose.yml
@@ -2,20 +2,27 @@ version: '3.8'
 
 services:
   db:
+    image: container-registry.oracle.com/database/free:latest
     environment:
-        POSTGRES_DB: postgres
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: password
-    build: ./db
-    volumes:
-      - ./db/pg-data:/var/lib/postgresql/data
+      ORACLE_PWD: password
+      ORACLE_SID: FREE
+      ORACLE_CHARACTERSET: AL32UTF8
+
+# db:
+  #   environment:
+  #       POSTGRES_DB: postgres
+  #       POSTGRES_USER: postgres
+  #       POSTGRES_PASSWORD: password
+  #   build: ./db
+  #   volumes:
+  #     - ./db/pg-data:/var/lib/postgresql/data
 
   backend:
     build: ./backend
     environment:
       - JWT_SECRET_KEY=qwiuefosjbnmreskfjdiv
-
+  
   frontend:
     build: ./frontend
     ports:
-      - "8080:8080"
+     - "8080:8080"
